<com.google.android.material.tabs.TabLayout
    android:id="@+id/tabs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.TabLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.tabs.TabItem
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:icon="@drawable/ic_card_travel_24px"
        android:text="@string/map"/>
    <com.google.android.material.tabs.TabItem
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:icon="@drawable/ic_home_24px"
        android:text="@string/home"/>
    <com.google.android.material.tabs.TabItem
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:icon="@drawable/ic_face_24px"
        android:text="@string/profile"/>

</com.google.android.material.tabs.TabLayout>