<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="60sp"
                        android:autoSizeTextType="uniform"
                        tools:targetApi="o">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/edit_Button"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginStart="30dp"
                            android:layout_weight="1"
                            android:text="@string/edit">

                        </com.google.android.material.button.MaterialButton>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="1">
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="0dp"
                            android:id="@+id/cancel_Button"
                            android:layout_height="40dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginStart="30dp"
                            android:text="@string/cancel"
                            android:background="@color/lightGray"
                            android:backgroundTint="@color/lightGray"
                            android:visibility="invisible"
                            android:layout_weight="1">

                        </com.google.android.material.button.MaterialButton>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:orientation="vertical"
                android:scrollbars="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".4"
                        android:text="@string/customerType"
                        android:paddingStart="14dp"
                        android:paddingVertical="17dp"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:layout_gravity="end"
                        tools:targetApi="o">
                    </TextView>
                    <Spinner
                        android:id="@+id/userTypes_Spinner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".6"
                        style="@style/Widget.AppCompat.Spinner.Underlined"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullName_EditText"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/Transparent"
                            android:hint="@string/fullName"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            android:enabled="false">
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_EditText"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/Transparent"
                            android:hint="@string/Email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            android:enabled="false">
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_EditText"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/Transparent"
                            android:hint="@string/phone"
                            android:inputType="numberDecimal"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            android:enabled="false">
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/occupancy_EditText"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/Transparent"
                            android:hint="@string/occupancy"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            android:enabled="false"
                            >
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/experience_EditText"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/Transparent"
                            android:hint="@string/experience"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            android:enabled="false"
                            >
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/userPhoto_ImageView"
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            android:layout_marginTop="1dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/photo"
                            android:textAlignment="center"
                            android:textStyle="italic" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5">
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/uploadPhoto_Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_photo"
                            android:layout_marginTop="80dp"
                            android:layout_marginStart="20dp"
                            android:clickable="false">

                        </com.google.android.material.button.MaterialButton>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>