<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lms.jobmaster.fragments.HomeFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/card"
        android:contentDescription="@string/image_src" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Name"
        style="@style/Headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textAlignment="center" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="80dp"
        app:strokeWidth="4dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profile_picture"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitCenter" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="45dp"
            android:text="@string/current_job"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="45dp"
            android:text="@string/status"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="90dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Description"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="130dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold"/>


    </com.google.android.material.card.MaterialCardView>

</FrameLayout>
